K1J-1606: Refactor HandleStaleDraftsService to improve deleteAndNotify method and update UtkastRepository usage